kubernetes/apps/media/radarr/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: radarr.${SECRET_DOMAIN}
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:filmstrip
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "radarr.${SECRET_DOMAIN}"
      secretName: "radarr-tls"
  rules:
    - host: "radarr.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
